Stub to start adding rain control back in

--- a/RTHooks/RTHooks.csproj
+++ b/RTHooks/RTHooks.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\RainMaker.cs" />
     <Compile Include="MainHooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoggingContentManager.cs" />
